<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.presentation.MainActivity">


    <include layout="@layout/toolbar_main" android:id="@+id/appbar"/>

    <ScrollView
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            android:clipToPadding="false">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/excuse_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="160dp"
                    android:padding="12dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textIsSelectable="true"
                    android:drawablePadding="5dp"
                    android:background="@drawable/main_text_view_background"
                    app:drawableTint="@color/blue"
                    app:drawableEndCompat="@drawable/ic_outline_next_plan_24" />
                <ImageButton
                    android:contentDescription="@string/next_excuse"
                    android:id="@+id/next_button"
                    android:padding="2dp"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_vertical|end"
                    app:tint="@color/blue"
                    android:src="@drawable/ic_outline_next_plan_24"
                    android:background="@drawable/transparent_ripple"/>
                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/progress_circular"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="12dp"
                    android:layout_gravity="center_vertical|end"
                    android:progress="40"
                    android:background="@android:color/white"
                    style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
                    android:visibility="gone"/>
            </FrameLayout>
            <RadioGroup
                android:id="@+id/category_radio"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/random">

                <RadioButton
                    android:id="@+id/random"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Theme.MyApplication.RadioButton"
                    android:text="@string/random"/>
                <RadioButton
                    android:id="@+id/family"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Theme.MyApplication.RadioButton"
                    android:text="@string/family"/>
                <RadioButton
                    android:id="@+id/office"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Theme.MyApplication.RadioButton"
                    android:text="@string/office"/>
                <RadioButton
                    android:id="@+id/children"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Theme.MyApplication.RadioButton"
                    android:text="@string/children"/>

            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <RadioButton
        android:id="@+id/college"
        style="@style/Theme.MyApplication.RadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/college" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>